--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
+    "react-animated-css": "^1.0.4",
     "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
