--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -7,7 +7,8 @@
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-scroll-to-component": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
