--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -7,6 +7,7 @@
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scroll-to-component": "^1.0.2"
   },
