--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -1,9 +1,11 @@
 {
   "name": "my-ehr",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://mgillespie19.github.io/myEHR-website/",
   "dependencies": {
     "firebase": "^5.7.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.6.3",
@@ -16,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy:": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
