--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -2,10 +2,9 @@
   "name": "my-ehr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mgillespie19.github.io/myEHR-website/",
+  "homepage": "https://mgillespie19.github.io/myEHR-website",
   "dependencies": {
     "firebase": "^5.7.0",
-    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.6.3",
@@ -30,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
