--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -2,7 +2,7 @@
   "name": "my-ehr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mgillespie19.github.io/myEHR-website",
+  "homepage": ".",
   "dependencies": {
     "firebase": "^5.7.0",
     "react": "^16.6.3",
