--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -8,6 +8,7 @@
     "react": "^16.6.3",
     "react-animated-css": "^1.0.4",
     "react-dom": "^16.6.3",
+    "react-ga": "^2.5.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
