--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -11,6 +11,7 @@
     "react-ga": "^2.5.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-scroll-top": "^0.1.1",
     "react-scripts": "^2.1.3",
     "react-scroll-to-component": "^1.0.2"
   },
