--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^4.3.1",
     "react-router-scroll-top": "^0.1.1",
     "react-scripts": "^2.1.5",
-    "react-scroll-to-component": "^1.0.2"
+    "react-scroll-to-component": "^1.0.2",
+    "react-table": "^6.9.2",
+    "xml2json": "^0.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
