--- a/my-ehr/package.json
+++ b/my-ehr/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^2.1.5",
     "react-scroll-to-component": "^1.0.2",
     "react-table": "^6.9.2",
+    "react-web3": "^1.2.0",
     "xml2json": "^0.11.2"
   },
   "scripts": {
